--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -5,7 +5,7 @@ import Icon from './Icon.astro';
 
 <aside>
 	<h2>Envie de travailler avec moi?</h2>
-	<CallToAction href="mailto:contact@sok.andy77.co">
+	<CallToAction href="mailto:sok.andy77@gmail.com">
 		Écrivez-moi 
 		<Icon icon="paper-plane-tilt" size="1.2em" />
 	</CallToAction>
