--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -7,6 +7,8 @@ import type { iconPaths } from './IconPaths';
 const textLinks: { label: string; href: string }[] = [
 	{ label: 'Accueil', href: '/' },
 	{ label: 'Projets', href: '/work/' },
+	{ label: 'Veille Technologique', href: '/veille/' },
+	{ label: 'Epreuve E4', href: '/E4/' },
 	{ label: 'A Propos', href: '/about/' },
 ];
 
