--- a/src/pages/E4.astro
+++ b/src/pages/E4.astro
@@ -5,11 +5,11 @@ import ContactCTA from '../components/ContactCTA.astro';
 import Hero from '../components/Hero.astro';
 ---
 
-<BaseLayout title="A propos | Andy SOK" description="En savoir plus sur Andy SOK">
+<BaseLayout title="Epreuve E4 | Andy SOK" description="En savoir plus sur Epreuve E4 de Andy SOK">
 	<div class="stack gap-20">
 		<main class="wrapper about">
 			<Hero
-				title="A propos"
+				title="Epreuve E4"
 				tagline="Découvez mon parcours et mes compétences."
 			>
 				<img
