--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ const projects = (await getCollection('work'))
 		<div class="wrapper stack gap-8 lg:gap-20">
 			<header class="hero">
 				<Hero
-					title="Bonjour, je m'apelle Andy"
+					title="Bonjour, je m'appelle Andy"
 					tagline="Je suis étudiant en 2ème année de BTS SIO"
 					align="start"
 				>
