--- a/src/pages/veille.astro
+++ b/src/pages/veille.astro
@@ -5,11 +5,11 @@ import ContactCTA from '../components/ContactCTA.astro';
 import Hero from '../components/Hero.astro';
 ---
 
-<BaseLayout title="A propos | Andy SOK" description="En savoir plus sur Andy SOK">
+<BaseLayout title="Veille Technologique | Andy SOK" description="Veille technologique  Andy SOK">
 	<div class="stack gap-20">
 		<main class="wrapper about">
 			<Hero
-				title="A propos"
+				title="Veille Technologique"
 				tagline="Découvez mon parcours et mes compétences."
 			>
 				<img
