--- a/src/pages/E4.astro
+++ b/src/pages/E4.astro
@@ -12,52 +12,22 @@ import Hero from '../components/Hero.astro';
 				title="Epreuve E4"
 				tagline="Découvez mon parcours et mes compétences."
 			>
-				<img
-					width="1553"
-					height="873"
-					src="/assets/stock-3.jpg"
-					alt=""
-				/>
+
 			</Hero>
 
 			<section>
-				<h2 class="section-title">Présentation</h2>
+				<h2 class="section-title">L’Épreuve E4</h2>
 				<div class="content">
-					Bonjour je suis Andy SOK
-					<br>
-Je suis actuellement étudiant au lycée Turgot de Paris en deuxième année de BTS SIO (Services Informatiques aux Organisations) dans l'option SLAM (Solutions Logicielles et Application Métier) qui en gros est une option spécialisée pour le développement.
-<br>
-Actuellement toujours en cours d'étude , je vous propose sur ce portfolio de retrouver ci-dessous les différentes études, et projet professionnel que j'ai pu entreprendre au sein de ma carrière.
-<br>
-Vous retrouverez ci-dessous mon CV ainsi que mes différents projets 
-<br>
-<br>
-<center><a href="https://drive.google.com/file/d/1gteDHvcVJmG-X3XO74tFhPX3RKI5bte7/view?usp=drive_link">Télécharger mon CV</a>
-</center>
+					L’épreuve E4 vise à évaluer la capacité des étudiants à appliquer leurs connaissances et compétences acquises pendant leur formation en BTS SIO dans un contexte professionnel. C’est un élément essentiel de l’évaluation de leur aptitude à travailler dans le domaine de l’informatique au sein des organisations et à résoudre des problèmes concrets. Elle compte pour une part importante de la note finale du BTS SIO.
+
 
 				</div>
 			</section>
-			<section>
-				<h2 class="section-title">Scolarité</h2>
-				<div class="content">
-					<p>Ma Deuxième Année en BTS SIO : La Suite de ma Passion Informatique
 
-						En deuxième année de BTS SIO, ma passion pour l'informatique continue de grandir. J'ai consolidé mes compétences techniques et je me concentre sur des domaines tels que la programmation avancée, la sécurité informatique, et la gestion de projets.
-						
-						Cette année, j'ai eu l'opportunité de travailler sur des projets concrets, ce qui m'a permis d'appliquer mes connaissances de manière pratique. J'ai également renforcé ma capacité à résoudre des problèmes et à collaborer au sein d'une équipe.
-						
-						Je suis déterminé à devenir un expert dans le domaine informatique, à explorer de nouvelles technologies et à préparer le terrain pour ma future carrière. Ma deuxième année en BTS SIO est une étape cruciale dans cette aventure passionnante.
-						
-						Rejoignez-moi dans cette aventure, et ensemble, nous continuerons à repousser les limites de l'informatique.
-						</p>
-				</div>
-			</section>
 			<section>
-				<h2 class="section-title">Compétences</h2>
-				<div class="content">
-					<p>Évoluant en deuxième année de BTS SIO, je suis un passionné d'informatique doté de compétences avancées en programmation, notamment en PHP, HTML, CSS, et SQL. Ma formation m'a également permis d'acquérir une solide compréhension de la sécurité informatique, de la gestion de projets et de la création de solutions sur mesure. Je suis constamment en quête d'innovation pour créer des solutions technologiques de pointe. Mon portfolio illustre mon dévouement à l'excellence et mon ambition d'apporter une contribution significative au monde de la technologie.</p>
-				</div>
-			</section>
+                <h2 class="section-title">Fichier PDF</h2>
+                <embed src="/assets/E4.pdf" width="1000" height="1500" type="application/pdf">
+            </section>
 		</main>
 
 		<ContactCTA />
