--- a/src/pages/veille.astro
+++ b/src/pages/veille.astro
@@ -10,7 +10,7 @@ import Hero from '../components/Hero.astro';
 		<main class="wrapper about">
 			<Hero
 				title="Veille Technologique"
-				tagline="Découvez mon parcours et mes compétences."
+				tagline="BTS SIO, veille technologique, suivi des dernières tendances et innovations pour rester à jour dans le domaine informatique."
 			>
 				<img
 					width="1553"
@@ -19,46 +19,71 @@ import Hero from '../components/Hero.astro';
 					alt=""
 				/>
 			</Hero>
+<title>Thème: Sécurité informatique sur les applications mobile.</title>
+			<section>
+				
+				<h2 class="section-title">C'est quoi ? </h2>
+				<div class="content">
+					La veille technologique consiste à rester constamment informé des dernières avancées et tendances dans un domaine spécifique. En intégrant cette pratique dans mon portfolio, je démontre ma capacité à rester à jour sur les innovations, à anticiper les changements et à adapter mes connaissances et compétences en conséquence.
+<br>
+
+
+				</div>
+			</section>
+			<section>
+				<h2 class="section-title">Thème</h2>
+				<div class="content">
+					Sécurité informatique sur les applications mobile.
+
+				</div>
+			</section>
+			<section>
+				<h2 class="section-title">Pourquoi ? </h2>
+				<div class="content">
+					J'ai opté pour ce thème de veille technologique en raison de mon fort intérêt pour la cybersécurité, un domaine de l'informatique vers lequel je souhaite orienter ma carrière. De plus, l'évolution constante des applications mobiles a également piqué ma curiosité.
+				</div>
+			</section>
+			
 
 			<section>
-				<h2 class="section-title">Présentation</h2>
-				<div class="content">
-					Bonjour je suis Andy SOK
+				<h2 class="section-title"></h2>
+				
+				<!-- Premier Article -->
+				<div class="article">
+					<h4>Google: une faille découverte dans l'application d'authentification à deux facteurs</h3>
 					<br>
-Je suis actuellement étudiant au lycée Turgot de Paris en deuxième année de BTS SIO (Services Informatiques aux Organisations) dans l'option SLAM (Solutions Logicielles et Application Métier) qui en gros est une option spécialisée pour le développement.
-<br>
-Actuellement toujours en cours d'étude , je vous propose sur ce portfolio de retrouver ci-dessous les différentes études, et projet professionnel que j'ai pu entreprendre au sein de ma carrière.
-<br>
-Vous retrouverez ci-dessous mon CV ainsi que mes différents projets 
-<br>
-<br>
-<center><a href="https://drive.google.com/file/d/1gteDHvcVJmG-X3XO74tFhPX3RKI5bte7/view?usp=drive_link">Télécharger mon CV</a>
-</center>
+					<p>27 avril 2023</p>
+					<br>
+					<p>Un article de BFMTV révèle une faille de sécurité récemment découverte dans l'application d'authentification à deux facteurs de Google. Cette faille soulève des inquiétudes quant à la sécurité des comptes Google et des données des utilisateurs. Pour plus de détails, consultez l'article complet sur <a href="https://www.bfmtv.com/tech/cybersecurite/google-une-faille-decouverte-dans-l-app-d-authentification-a-deux-facteurs_AN-202304270693.html">BFMTV</a>.</p>
+					<p>Source BFMTV</p>
+				</div>
+				<br>
+				<h2 class="section-title"></h2>
+				<!-- Deuxième Article -->
+				<div class="article">
+					<h4>Sécuriser votre application mobile : à quel moment devez-vous l’envisager ?</h3>
+					<br>
+					<p>12 janvier 2023</p>
+					<br>
+					<p>Un article souligne l'importance de sécuriser les applications mobiles dès leur création pour éviter des coûts élevés en cas de failles de sécurité. Il met également en avant l'impact positif sur la confiance des utilisateurs, la réputation et la protection de la propriété intellectuelle. En somme, il encourage à considérer la sécurité comme une priorité dès le début du développement d'applications mobiles. Pour plus de détails, consultez l'article complet sur <a href="https://thetribe.io/quand-securiser-votre-application-mobile/">TheTribe</a>.</p>
+					<p>Source TheTribe</p>
+				</div>
+				<br>
+				<h2 class="section-title"></h2>
+				<!-- Troisième Article -->
+				<div class="article">
+					<h4>MobSF - Analyser la sécurité d'une application mobile</h3>
+					<br>
+					<p>4 juin 2024</p>
+					<br>
+					<p>La vidéo présente MobSF, un outil open-source pour évaluer la sécurité des applications mobiles Android. Elle explique comment installer, configurer et utiliser MobSF pour détecter les vulnérabilités et les problèmes de sécurité dans les applications. MobSF offre des analyses statiques et dynamiques, génère des rapports de sécurité, et fournit des recommandations pour améliorer la sécurité des applications. Cet outil est essentiel pour les développeurs et les experts en sécurité mobile. Pour plus de détails, consultez la vidéo sur <a href="https://www.youtube.com/watch?v=2RRBJK0s_dg">YouTube</a>.</p>
+					<p>Source Preuve De Concept</p>
+				</div>
+		
+			</section>
 
-				</div>
-			</section>
-			<section>
-				<h2 class="section-title">Scolarité</h2>
-				<div class="content">
-					<p>Ma Deuxième Année en BTS SIO : La Suite de ma Passion Informatique
-
-						En deuxième année de BTS SIO, ma passion pour l'informatique continue de grandir. J'ai consolidé mes compétences techniques et je me concentre sur des domaines tels que la programmation avancée, la sécurité informatique, et la gestion de projets.
-						
-						Cette année, j'ai eu l'opportunité de travailler sur des projets concrets, ce qui m'a permis d'appliquer mes connaissances de manière pratique. J'ai également renforcé ma capacité à résoudre des problèmes et à collaborer au sein d'une équipe.
-						
-						Je suis déterminé à devenir un expert dans le domaine informatique, à explorer de nouvelles technologies et à préparer le terrain pour ma future carrière. Ma deuxième année en BTS SIO est une étape cruciale dans cette aventure passionnante.
-						
-						Rejoignez-moi dans cette aventure, et ensemble, nous continuerons à repousser les limites de l'informatique.
-						</p>
-				</div>
-			</section>
-			<section>
-				<h2 class="section-title">Compétences</h2>
-				<div class="content">
-					<p>Évoluant en deuxième année de BTS SIO, je suis un passionné d'informatique doté de compétences avancées en programmation, notamment en PHP, HTML, CSS, et SQL. Ma formation m'a également permis d'acquérir une solide compréhension de la sécurité informatique, de la gestion de projets et de la création de solutions sur mesure. Je suis constamment en quête d'innovation pour créer des solutions technologiques de pointe. Mon portfolio illustre mon dévouement à l'excellence et mon ambition d'apporter une contribution significative au monde de la technologie.</p>
-				</div>
-			</section>
 		</main>
+		
 
 		<ContactCTA />
 	</div>
