--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,7 +9,7 @@ import Hero from '../components/Hero.astro';
 	<div class="stack gap-20">
 		<main class="wrapper about">
 			<Hero
-				title="A propos"
+				title="À propos"
 				tagline="Découvez mon parcours et mes compétences."
 			>
 				<img
