--- a/src/pages/veille.astro
+++ b/src/pages/veille.astro
@@ -78,10 +78,11 @@ import Hero from '../components/Hero.astro';
 					<br>
 					<p>La vidéo présente MobSF, un outil open-source pour évaluer la sécurité des applications mobiles Android. Elle explique comment installer, configurer et utiliser MobSF pour détecter les vulnérabilités et les problèmes de sécurité dans les applications. MobSF offre des analyses statiques et dynamiques, génère des rapports de sécurité, et fournit des recommandations pour améliorer la sécurité des applications. Cet outil est essentiel pour les développeurs et les experts en sécurité mobile. Pour plus de détails, consultez la vidéo sur <a href="https://www.youtube.com/watch?v=2RRBJK0s_dg">YouTube</a>.</p>
 					<p>Source Preuve De Concept</p>
-				</div>
 		
-			</section>
-
+<br>
+				<a href="https://docs.google.com/document/d/15on6tP6DKipNg_RpWMIa4r3o-D0-vQuKZ_xJpK2ioEc/edit?usp=sharing">Consulter la veille</a>
+			</div>
+		</section>
 		</main>
 		
 
